--- a/frontend/src/components/button.module.css
+++ b/frontend/src/components/button.module.css
@@ -10,7 +10,7 @@
 }
 
 .storybook-button:hover {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.7); 
   color: #aa1f3e;
   border: 1px solid #aa1f3e;  /* 올바른 border 속성 사용 */
 }
@@ -23,7 +23,7 @@
 
 .storybook-button--secondary {
   box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0.7); 
   color: #333;
 }
 
@@ -32,18 +32,21 @@
   padding: 9px 16px;
   font-size: 12px;
   border: 1px solid  #445366;  /* 올바른 border 속성 사용 */
+  background-color: rgba(255, 255, 255, 0.7); 
 }
 
 .storybook-button--medium {
   padding: 10px 20px;
   font-size: 14px;
   border: 1px solid  #445366;  /* 올바른 border 속성 사용 */
+  background-color: rgba(255, 255, 255, 0.7); 
 }
 
 .storybook-button--large {
   padding: 11px 24px;
   font-size: 16px;
   border: 1px solid  #445366;  /* 올바른 border 속성 사용 */
+  background-color: rgba(255, 255, 255, 0.7);  
 }
 
 .storybook-button--biglarge {
@@ -51,6 +54,7 @@
   padding: 12px 24px;
   font-size: 16px;
   border: 1px solid  #445366;  /* 올바른 border 속성 사용 */
+  background-color: rgba(255, 255, 255, 0.7); 
 }
 
 .storybook-button--kingbiglarge {
@@ -58,6 +62,7 @@
   padding: 12px 24px;
   font-size: 16px;
   border: 1px solid  #445366;  /* 올바른 border 속성 사용 */
+  background-color: rgba(255, 255, 255, 0.7); 
 }
 
 .storybook-button--colorsmall {
